--- a/package.json
+++ b/package.json
@@ -1,39 +1,34 @@
 {
-  "name": "api",
-  "version": "1.0.0",
-  "description": "typescript express node mongo boilerplate starter",
-  "main": "index.js",
-  "scripts": {
-    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
-    "tsc": "tsc",
-    "dev": "ts-node-dev --respawn --transpileOnly ./app.ts",
-    "prod": "tsc && node ./build/app.js"
-  },
-  "author": "ivucicev@gmail.com",
-  "license": "",
-  "dependencies": {
-    "@types/express-session": "^1.15.12",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.18.3",
-    "cors": "^2.8.5",
-    "dotenv": "^6.2.0",
-    "express": "^4.16.4",
-    "express-session": "^1.16.1",
-    "mongoose": "^5.4.16",
-    "node-html-parser": "^1.1.16",
-    "request": "^2.88.0",
-    "ts-node-dev": "^1.0.0-pre.32",
-    "tslint": "^5.13.1",
-    "uuid": "^3.3.2"
-  },
-  "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/body-parser": "^1.17.0",
-    "@types/cors": "^2.8.4",
-    "@types/dotenv": "^6.1.0",
-    "@types/mongoose": "^5.3.20",
-    "@types/uuid": "^3.4.4",
-    "eslint": "^5.16.0",
-    "typescript": "^3.5.1"
-  }
+    "name": "appraisly-mail-queue",
+    "version": "1.0.0",
+    "description": "Apprais-ly mail queue",
+    "main": "index.js",
+    "scripts": {
+        "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
+        "tsc": "tsc",
+        "dev": "ts-node-dev --respawn --transpileOnly ./app.ts",
+        "build-prod": "tslint -c tslint.json -p tsconfig.json --fix && tsc",
+        "prod": "tsc && node ./build/app.js"
+    },
+    "author": "ivucicev@gmail.com",
+    "license": "",
+    "dependencies": {
+        "dotenv": "^6.2.0",
+        "express": "^4.17.1",
+        "mail-time": "^1.2.6",
+        "mongoose": "^5.12.4",
+        "nodemailer": "^6.5.0",
+        "ts-node-dev": "^1.1.6",
+        "tslint": "^5.20.1",
+        "uuid": "^3.4.0"
+    },
+    "devDependencies": {
+        "@types/dotenv": "^6.1.1",
+        "@types/express": "^4.17.11",
+        "@types/mongoose": "^5.10.5",
+        "@types/nodemailer": "^6.4.1",
+        "@types/uuid": "^3.4.9",
+        "eslint": "^5.16.0",
+        "typescript": "^3.9.9"
+    }
 }
